--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@
   --sidebar-ring: oklch(0.704 0.04 256.788);
   --background: oklch(0.98 0 0);
   --foreground: oklch(0.129 0.042 264.695);
+  --primary-blue: #175CD3;
 }
 
 .dark {
